/csi-driver-ca-certificates
Signed-off-by: Tamal Saha <tamal@appscode.com>

--- a/data/vanity.yaml
+++ b/data/vanity.yaml
@@ -15,3 +15,6 @@ paths:
 
   /resource-calculator:
     repo: https://github.com/kubeops/resource-calculator
+
+  /csi-driver-ca-certificates:
+    repo: https://github.com/kubeops/csi-driver-ca-certificates
