--- a/data/vanity.yaml
+++ b/data/vanity.yaml
@@ -13,6 +13,9 @@ paths:
   /csi-driver-cacerts:
     repo: https://github.com/kubeops/csi-driver-cacerts
 
+  /external-dns-operator:
+    repo: https://github.com/kubeops/external-dns-operator
+
   /fsloader:
     repo: https://github.com/kubeops/fsloader
 
