/falco-ui-server
Signed-off-by: Tamal Saha <tamal@appscode.com>

--- a/data/vanity.yaml
+++ b/data/vanity.yaml
@@ -16,6 +16,9 @@ paths:
   /external-dns-operator:
     repo: https://github.com/kubeops/external-dns-operator
 
+  /falco-ui-server:
+    repo: github.com/kubeops/falco-ui-server
+
   /fsloader:
     repo: https://github.com/kubeops/fsloader
 
