Add https Scheme to falco-ui-server
Signed-off-by: Arnob kumar saha <arnob@appscode.com>

--- a/data/vanity.yaml
+++ b/data/vanity.yaml
@@ -17,7 +17,7 @@ paths:
     repo: https://github.com/kubeops/external-dns-operator
 
   /falco-ui-server:
-    repo: github.com/kubeops/falco-ui-server
+    repo: https://github.com/kubeops/falco-ui-server
 
   /fsloader:
     repo: https://github.com/kubeops/fsloader
