--- a/data/vanity.yaml
+++ b/data/vanity.yaml
@@ -43,6 +43,9 @@ paths:
   /sidekick:
     repo: https://github.com/kubeops/sidekick
 
+  /statefulset:
+    repo: https://github.com/kubeops/statefulset
+
   /supervisor:
     repo: https://github.com/kubeops/supervisor
 
