--- a/data/vanity.yaml
+++ b/data/vanity.yaml
@@ -36,3 +36,5 @@ paths:
     repo: https://github.com/kubeops/ui-server
   /vcluster-plugin:
     repo: https://github.com/kubeops/vcluster-plugin
+  /wal-listener:
+    repo: https://github.com/kubeops/wal-listener
