--- a/data/vanity.yaml
+++ b/data/vanity.yaml
@@ -12,6 +12,8 @@ paths:
     repo: https://github.com/kubeops/external-dns-operator
   /falco-ui-server:
     repo: https://github.com/kubeops/falco-ui-server
+  /fargocd:
+    repo: https://github.com/kubeops/fargocd
   /fsloader:
     repo: https://github.com/kubeops/fsloader
   /installer:
