Test different paths
Signed-off-by: Arnob kumar saha <arnob@appscode.com>

--- a/data/vanity.yaml
+++ b/data/vanity.yaml
@@ -29,7 +29,7 @@ paths:
   /pgoutbox:
     repo: https://github.com/kubeops/pgoutbox
     versions:
-    - apis
+    - utils
   /resource-calculator:
     repo: https://github.com/kubeops/resource-calculator
   /scanner:
