--- a/data/vanity.yaml
+++ b/data/vanity.yaml
@@ -38,6 +38,8 @@ paths:
     repo: https://github.com/kubeops/sidekick
   /supervisor:
     repo: https://github.com/kubeops/supervisor
+  /taskqueue:
+    repo: https://github.com/kubestash/taskqueue
   /ui-server:
     repo: https://github.com/kubeops/ui-server
   /vcluster-plugin:
